--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dayjs": "^1.10.4",
     "elliptic": "^6.5.4",
     "events": "^3.3.0",
+    "random-int": "^3.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.3"
   },
