--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bip32": "^2.0.6",
     "bs58": "^4.0.1",
     "bs58check": "^2.1.2",
+    "js-sha3": "^0.8.0",
     "btoa": "^1.2.1",
     "buffer": "^5.6.0",
     "create-hash": "^1.2.0",
