--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "assert": "^2.0.0",
     "bignumber.js": "^9.0.2",
     "bip32": "^2.0.6",
+    "bip39": "^3.0.4",
     "bs58": "^4.0.1",
     "bs58check": "^2.1.2",
-    "js-sha3": "^0.8.0",
     "btoa": "^1.2.1",
     "buffer": "^5.6.0",
     "create-hash": "^1.2.0",
@@ -38,6 +38,7 @@
     "dayjs": "^1.10.4",
     "elliptic": "^6.5.4",
     "events": "^3.3.0",
+    "js-sha3": "^0.8.0",
     "random-int": "^3.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.3"
