--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "dependencies": {
     "assert": "^2.0.0",
     "bignumber.js": "^9.0.2",
-    "bn.js": "^5.2.0",
     "bip32": "^2.0.6",
     "bip39": "^3.0.4",
+    "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
     "bs58check": "^2.1.2",
     "btoa": "^1.2.1",
@@ -38,6 +38,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.4",
     "elliptic": "^6.5.4",
+    "ethers": "^5.6.2",
     "events": "^3.3.0",
     "js-sha3": "^0.8.0",
     "random-int": "^3.0.0",
