--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "4.2.4"
   },
   "engines": {
     "node": ">=14.0.0"
