--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -1,8 +1,5 @@
 {
-  "include": [
-    "src/index.ts",
-    "src/walletcore/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "tests", "data", "dist", "dist.esm"],
   "compilerOptions": {
     "target": "esnext",
