--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Elastos Wallet Javascript SDK",
   "scripts": {
-    "prepublishOnly": "npm run clean && npm run build",
-    "build": "npm run clean && npm run types && rollup -c --environment prodbuild",
+    "prepublishOnly": "npm run build",
+    "build": "npm run build:release",
+    "build:debug": "npm run clean && npm run types && rollup -c",
+    "build:release": "npm run clean && npm run types && rollup -c --environment prodbuild",
     "dev": "rollup -c -w",
     "clean": "rm -rf dist/ typings/ generated/",
     "types": "npm run clean && tsc --emitDeclarationOnly --outDir typings/ --project tsconfig.types.json",
@@ -25,72 +27,73 @@
   },
   "typings": "typings/",
   "dependencies": {
-    "assert": "^2.0.0",
+    "@ethersproject/abstract-provider": "^5.6.0",
+    "@ethersproject/transactions": "^5.6.0",
+    "assert": "2.0.0",
     "bignumber.js": "^9.0.2",
-    "bip32": "^2.0.6",
-    "bip39": "^3.0.4",
-    "bn.js": "^5.2.0",
-    "bs58": "^4.0.1",
-    "bs58check": "^2.1.2",
-    "btoa": "^1.2.1",
-    "buffer": "^5.6.0",
-    "create-hash": "^1.2.0",
-    "crypto-browserify": "^3.12.0",
+    "bip32": "2.0.6",
+    "bip39": "3.0.4",
+    "bn.js": "5.2.0",
+    "bs58": "4.0.1",
+    "bs58check": "2.1.2",
+    "buffer": "5.7.1",
+    "create-hash": "1.2.0",
+    "crypto-browserify": "3.12.0",
     "crypto-js": "^4.1.1",
-    "dayjs": "^1.10.4",
-    "elliptic": "^6.5.4",
-    "ethers": "^5.6.2",
-    "events": "^3.3.0",
+    "dayjs": "^1.11.1",
+    "elliptic": "6.5.4",
+    "ethers": "^5.6.5",
+    "events": "3.3.0",
     "js-sha3": "^0.8.0",
     "random-int": "^3.0.0",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.3"
+    "string_decoder": "1.3.0",
+    "util": "0.12.4"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-inject": "^4.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@rollup/plugin-typescript": "^8.2.1",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/plugin-proposal-decorators": "7.16.4",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-typescript": "7.16.0",
+    "@rollup/plugin-alias": "3.1.8",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "19.0.2",
+    "@rollup/plugin-eslint": "8.0.1",
+    "@rollup/plugin-inject": "4.0.3",
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-node-resolve": "13.0.6",
+    "@rollup/plugin-replace": "2.4.2",
+    "@rollup/plugin-typescript": "8.3.0",
+    "@types/bn.js": "5.1.0",
     "@types/jest": "^26.0.23",
-    "@types/node": "^14.14.44",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "eslint": "^7.27.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "@types/node": "14.17.34",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
+    "eslint": "8.9.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.0.0",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "jest-html-reporter": "^3.4.0",
     "jest-lite": "^1.0.0-alpha.4",
-    "path-browserify": "^1.0.1",
-    "rollup": "^2.47.0",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-copy-assets": "^2.0.3",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-file-content-replace": "^1.0.0",
-    "rollup-plugin-multi-input": "^1.2.0",
-    "rollup-plugin-natives": "^0.7.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-polyfill-node": "^0.6.2",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-serve": "^1.1.0",
+    "path-browserify": "1.0.1",
+    "rollup": "2.67.2",
+    "rollup-plugin-analyzer": "4.0.0",
+    "rollup-plugin-copy-assets": "2.0.3",
+    "rollup-plugin-file-content-replace": "file:./build-plugins/rollup-plugin-file-content-replace",
+    "rollup-plugin-multi-input": "1.3.1",
+    "rollup-plugin-natives": "0.7.5",
+    "rollup-plugin-node-globals": "1.4.0",
+    "rollup-plugin-polyfill-node": "0.6.2",
     "rollup-plugin-size": "^0.2.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "rollup-plugin-visualizer": "^5.5.0",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
-    "tslib": "^2.2.0",
-    "typescript": "4.2.4"
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-visualizer": "5.5.2",
+    "ts-jest": "26.5.6",
+    "ts-node": "9.1.1",
+    "tslib": "2.3.1",
+    "typescript": "4.5.5"
   },
   "engines": {
     "node": ">=14.0.0"
