--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastosfoundation/wallet-js-sdk",
-  "version": "1.0.0",
+  "version": "0.0.2-alpha",
   "description": "Elastos Wallet Javascript SDK",
   "scripts": {
     "prepublishOnly": "npm run build",
