--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "./dist/wallet.js": "./dist/wallet.browser.js",
     "./dist/es/wallet.js": "./dist/es/wallet.browser.js"
   },
-  "typings": "typings/",
+  "typings": "typings/index.d.ts",
   "dependencies": {
     "@ethersproject/abstract-provider": "^5.6.0",
     "@ethersproject/transactions": "^5.6.0",
