--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastosfoundation/wallet-js-sdk",
-  "version": "0.0.2-alpha",
+  "version": "0.0.3-alpha",
   "description": "Elastos Wallet Javascript SDK",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -33,7 +33,7 @@
     "bignumber.js": "^9.0.2",
     "bip32": "2.0.6",
     "bip39": "3.0.4",
-    "bn.js": "5.2.0",
+    "bn.js": "^5.2.0",
     "bs58": "4.0.1",
     "bs58check": "2.1.2",
     "buffer": "5.7.1",
@@ -41,7 +41,7 @@
     "crypto-browserify": "3.12.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.1",
-    "elliptic": "6.5.4",
+    "elliptic": "^6.5.4",
     "ethers": "^5.6.5",
     "events": "3.3.0",
     "js-sha3": "^0.8.0",
