--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       "node_modules/@types"
     ],
     "paths": {
+      "bn.js": [
+        "./node_modules/bn.js"
+      ],
       "elliptic": [
         "./node_modules/elliptic"
       ]
