--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-polyfill-node": "0.6.2",
     "rollup-plugin-size": "^0.2.2",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-visualizer": "5.5.2",
     "ts-jest": "26.5.6",
