--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "typings": "typings/index.d.ts",
   "dependencies": {
     "@ethersproject/abstract-provider": "^5.6.0",
+    "@ethersproject/address": "^5.7.0",
     "@ethersproject/transactions": "^5.6.0",
     "assert": "2.0.0",
     "bignumber.js": "^9.0.2",
