--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastosfoundation/wallet-js-sdk",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "Elastos Wallet Javascript SDK",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -96,7 +96,7 @@
     "ts-jest": "26.5.6",
     "ts-node": "9.1.1",
     "tslib": "2.3.1",
-    "typescript": "4.5.5"
+    "typescript": "4.9.5"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -119,5 +119,6 @@
   "bugs": {
     "url": "https://github.com/elastos/Elastos.ELA.Wallet.JS.SDK/issues"
   },
-  "homepage": "https://github.com/elastos/Elastos.ELA.Wallet.JS.SDK#readme"
+  "homepage": "https://github.com/elastos/Elastos.ELA.Wallet.JS.SDK#readme",
+  "packageManager": "yarn@1.22.22"
 }
